--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,9 +78,35 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="init"
-        android:id="@+id/initButton"
+        android:text="create"
+        android:id="@+id/createButton"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="addTable"
+        android:id="@+id/addTableButton"
+        android:layout_below="@+id/createButton"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="50dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableName"
+        android:layout_alignBottom="@+id/addTableButton"
+        android:layout_alignParentEnd="true"
+        android:width="100dp"
+        android:text="table_2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="delete"
+        android:id="@+id/deleteButton"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/createButton" />
 
 </RelativeLayout>
